@@ -64,7 +64,7 @@ BUILD_INCLUDED_LIBINTL = no
 CATALOGS =  de.gmo fr.gmo pl.gmo zh_TW.Big5.gmo
 CATOBJEXT = .gmo
 CC = gcc
-CFLAGS = -O2 -Wall -Wunused 
+CFLAGS = -g -O2 -Wall -Wunused 
 CXX = g++
 CXXCPP = g++ -E
 DATADIRNAME = share
@@ -83,7 +83,7 @@ GHFW_CFLAGS = -I/usr/include -DNEED_GNOMESUPPORT_H -I/usr/lib/gnome-libs/include
 GHFW_INCLUDEDIR = -I/usr/include
 GHFW_INTERFACE_AGE = 0
 GHFW_LIBDIR = -L/usr/lib
-GHFW_LIBS = -lghfaxwidgets -lSM -lICE -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm -rdynamic -L/usr/lib -L/usr/X11R6/lib -lgnomeui -lart_lgpl -lgdk_imlib -lSM -lICE -lgtk -lgdk -lgmodule -lXi -lXext -lX11 -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib -ldl 
+GHFW_LIBS = -lghfax_widgets -lSM -lICE -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXi -lXext -lX11 -lm -rdynamic -L/usr/lib -L/usr/X11R6/lib -lgnomeui -lart_lgpl -lgdk_imlib -lSM -lICE -lgtk -lgdk -lgmodule -lXi -lXext -lX11 -lgnome -lgnomesupport -lesd -laudiofile -lm -ldb-3 -lglib -ldl 
 GHFW_MAJOR_VERSION = 0
 GHFW_MICRO_VERSION = 0
 GHFW_MINOR_VERSION = 0
